--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ngx-material-timepicker": "^5.5.3",
     "ngx-toastr": "^13.2.1",
     "popper.js": "^1.14.3",
+    "primeicons": "^6.0.1",
+    "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
